...
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dateBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#634D72"
                android:text="Choose Date"
                android:textColor="#FFFFFF"></Button>

            <Button
                android:id="@+id/timeBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#634D72"
                android:text="Choose Time"
...
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0." />

        <Button
            android:id="@+id/bookBtn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#634D72"
            android:text=" Book Appointment"

...
